# worldcup26-momentum

./: CLAUDE.md  PROJECT_BRIEF.md  README.md  match_ids.json  pyproject.toml
data/: README.md  match_ids.json
data/processed/: matches.json  momentum.json  stoppages.parquet
data/raw/sofascore/: 12812989.json  12812990.json  12812991.json  12812992.json  12812993.json  12812994.json  12812995.json  12812996.json  12812997.json  12812998.json  12812999.json  (+89 more)
docs/: index.html
processed/: momentum.json  stoppages.parquet
scripts/: daily.sh
snapshots/2026-06-30/: summary.json
snapshots/2026-07-01/: summary.json
snapshots/2026-07-02/: summary.json
snapshots/2026-07-03/: summary.json
snapshots/2026-07-04/: summary.json
snapshots/2026-07-05/: summary.json
snapshots/2026-07-06/: summary.json
snapshots/2026-07-07/: summary.json
snapshots/2026-07-08/: summary.json
snapshots/2026-07-09/: summary.json
snapshots/2026-07-10/: summary.json
snapshots/2026-07-11/: summary.json
snapshots/2026-07-12/: summary.json
snapshots/2026-07-13/: summary.json
snapshots/2026-07-14/: summary.json
snapshots/2026-07-15/: summary.json
snapshots/2026-07-16/: summary.json
snapshots/2026-07-17/: summary.json
snapshots/2026-07-19/: summary.json
snapshots/2026-07-20/: summary.json
src/: app.py  paths.py  pipeline.py  snapshot.py
src/analysis/: descriptive.py
src/features/: momentum_features.py
src/parse/: stoppages.py
src/report/: build_site.py
src/scrape/: sofascore.py
src/viz/: charts.py
tests/: conftest.py  test_stoppages.py  test_windowing.py
(+2 files in other folders)
