[project]
name = "wc-rafael"
version = "0.1.0"
description = "Momentum analysis during stoppages (hydration, VAR, injury) at the 2026 FIFA World Cup — SofaScore only."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "polars>=1.0",
    "pyarrow>=16.0",
    "httpx>=0.27",
    "curl-cffi>=0.15.0",
    "statsmodels>=0.14",
    "scipy>=1.13",
    "plotly>=5.22",
    "dash>=2.18",
    "python-dateutil>=2.9",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
notebook = ["marimo>=0.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
